--- a/etf-trading-config/model.yaml
+++ b/etf-trading-config/model.yaml
@@ -20,11 +20,19 @@ params:
   spread_cap_pct: 0.25
   correlation_cap: 2
 stop_criteria:
+  # KPI guardrails
+  min_sharpe: 0.30
+  profit_factor_min: 1.10
+  maxdd_limit_pct: 0.35
+  # Walk-forward stability (trimmed CoV of Calmar: ignore best/worst window)
+  wf_calmar_var_max_pct: 30.0
+  wf_trim: 1
+  # legacy keys (ignored by guardrails.py unless referenced altrove)
   calmar_improve_min_pct: 2.0
   maxdd_reduction_min_pp: 0.30
-  wf_calmar_var_max_pct: 15.0
+  wf_calmar_var_max_pct_legacy: 15.0
   spa_white_p_max: 0.10
   under_benchmark_windows: 2
 data:
-  source_repo: "https://github.com/antoniosanso/etf-datalake"
+  source_repo: "web_ingest"  # now fetching via Yahoo Finance
   expected_columns: ["Date","Ticker","Open","High","Low","Close","Volume","Currency"]
