--- a/etf-trading-config/wf_windows.yaml
+++ b/etf-trading-config/wf_windows.yaml
@@ -1,8 +1,5 @@
 windows:
-  - { name: "WF-1", test_start: "2022-01-01", test_end: "2022-06-30" }
-  - { name: "WF-2", test_start: "2022-07-01", test_end: "2022-12-31" }
-  - { name: "WF-3", test_start: "2023-01-01", test_end: "2023-06-30" }
-  - { name: "WF-4", test_start: "2023-07-01", test_end: "2023-12-31" }
-  - { name: "WF-5", test_start: "2024-01-01", test_end: "2024-06-30" }
-  - { name: "WF-6", test_start: "2024-07-01", test_end: "2024-12-31" }
-  - { name: "WF-7", test_start: "2025-01-01", test_end: "2025-06-30" }
+  - { name: "WF-2022", test_start: "2022-01-01", test_end: "2022-12-31" }
+  - { name: "WF-2023", test_start: "2023-01-01", test_end: "2023-12-31" }
+  - { name: "WF-2024", test_start: "2024-01-01", test_end: "2024-12-31" }
+  - { name: "WF-2025YTD", test_start: "2025-01-01", test_end: "2025-10-08" }
