--- a/.github/workflows/trading_suite.yml
+++ b/.github/workflows/trading_suite.yml
@@ -45,9 +45,9 @@ jobs:
         shell: bash
         run: |
           python etf-trading-engine/scripts/download_eod_yf.py \
-            --universe ./etf-trading-config/universe.csv \
-            --output ./etf-trading-engine/data/eod.csv \
-            --start 2018-01-01 --threads 4 --sleep 0.25 --adjusted
+      --universe ./etf-trading-config/universe.csv \
+      --output ./etf-trading-engine/data/eod.csv \
+      --start 2018-01-01 --threads 4 --sleep 0.15 --min_success 10
 
       - name: Sanity check EOD
         shell: bash
