--- a/.github/workflows/retro_asof.yml
+++ b/.github/workflows/retro_asof.yml
@@ -1,25 +1,39 @@
-name: Retro Run — As Of
+name: Retro Run — As-Of
+
 on:
   workflow_dispatch:
     inputs:
       as_of:
-        description: 'Data as-of (YYYY-MM-DD)'
+        description: "Data limite (YYYY-MM-DD)"
         required: true
         type: string
-      slippage_bps:
-        description: 'Slippage (basis points, es. 5 = 0.05%)'
+      start:
+        description: "Data di inizio (opzionale, YYYY-MM-DD)"
         required: false
         type: string
-        default: '5'
+
+concurrency:
+  group: retro-asof-${{ github.ref }}
+  cancel-in-progress: false
+
+permissions:
+  contents: read
 
 jobs:
   retro:
-    runs-on: ubuntu-latest
-    env:
-      PYTHONPATH: etf-trading-engine
+    runs-on: ubuntu-22.04
+    timeout-minutes: 60
+
     steps:
-      - name: Checkout
+      - name: Checkout suite
         uses: actions/checkout@v4
+
+      - name: Checkout datalake (read-only)
+        uses: actions/checkout@v4
+        with:
+          repository: antoniosanso/etf-datalake
+          path: etf-datalake
+          fetch-depth: 1
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -30,77 +44,40 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r etf-trading-engine/requirements.txt
-          pip install pandas numpy pyyaml
-        shell: bash
 
-      - name: Download EOD (full, latest)
+      - name: Merge EOD dal datalake
         run: |
-          python etf-trading-engine/scripts/download_eod_yf.py \
-            --universe ./etf-trading-config/universe.csv \
-            --output ./etf-trading-engine/data/eod.csv \
-            --start 2018-01-01 --threads 4 --sleep 0.15 --min_success 10
-        shell: bash
+          python etf-trading-engine/scripts/merge_eod.py             --datalake ./etf-datalake             --output  ./etf-trading-engine/data/eod.csv             --recursive             --datecol dt --closecol close --tickercol ticker             --opencol open --highcol high --lowcol low --volumecol volume
 
       - name: Clip data to as-of
         run: |
-          python etf-trading-engine/scripts/clip_asof.py \
-            --data etf-trading-engine/data/eod.csv \
-            --as_of "${{ inputs.as_of }}" \
-            --out etf-trading-engine/data/eod_asof.csv
-        shell: bash
+          python etf-trading-engine/scripts/clip_asof.py             --input  ./etf-trading-engine/data/eod.csv             --output ./etf-trading-engine/data/eod_asof.csv             --as-of "${{ inputs.as_of }}"             ${{ inputs.start && format('--start {0}', inputs.start) }}
+          mv ./etf-trading-engine/data/eod_asof.csv ./etf-trading-engine/data/eod.csv
 
       - name: Build features (as-of)
         run: |
-          python etf-trading-engine/scripts/build_features.py \
-            --features ./etf-trading-config/features.yaml \
-            --universe ./etf-trading-config/universe.csv \
-            --outdir ./features_asof \
-            --data etf-trading-engine/data/eod_asof.csv
-        shell: bash
+          python etf-trading-engine/scripts/build_features.py             --features ./etf-trading-config/features.yaml             --universe ./etf-trading-config/universe.csv             --outdir ./features_asof
 
       - name: Generate signals (as-of)
         run: |
-          python etf-trading-engine/scripts/signals.py \
-            --config ./etf-trading-config/signals.yaml \
-            --data etf-trading-engine/data/eod_asof.csv \
-            --outdir ./outputs_asof \
-            --features_cfg ./etf-trading-config/features.yaml \
-            --features_dir ./features_asof
-        shell: bash
+          python etf-trading-engine/scripts/signals.py             --config ./etf-trading-config/signals.yaml             --features_cfg ./etf-trading-config/features.yaml             --features_dir ./features_asof             --outdir ./outputs_asof
 
       - name: Backtest (as-of)
         run: |
-          python etf-trading-engine/scripts/run_ci_backtest.py \
-            --config etf-trading-config/model.yaml \
-            --data etf-trading-engine/data/eod_asof.csv \
-            --outdir outputs_asof
-        shell: bash
+          python etf-trading-engine/examples/run_backtest.py             --config ./etf-trading-config/model.yaml             --data   ./etf-trading-engine/data/eod.csv             --outdir ./outputs_asof
 
       - name: Walk-Forward (as-of)
         run: |
-          python etf-trading-engine/scripts/walk_forward.py \
-            --config etf-trading-config/model.yaml \
-            --data etf-trading-engine/data/eod_asof.csv \
-            --windows etf-trading-config/wf_windows.yaml \
-            --outdir outputs_asof
-        shell: bash
+          python etf-trading-engine/scripts/walk_forward.py             --config ./etf-trading-config/model.yaml             --data   ./etf-trading-engine/data/eod.csv             --windows etf-trading-config/wf_windows.yaml             --outdir ./outputs_asof
 
       - name: Evaluate realized P&L vs expected & B&H + extra checks
         run: |
-          python etf-trading-engine/scripts/retro_evaluate.py \
-            --as_of "${{ inputs.as_of }}" \
-            --signals ./outputs_asof/signals/entries_today.csv \
-            --eod_full ./etf-trading-engine/data/eod.csv \
-            --universe ./etf-trading-config/universe.csv \
-            --slippage_bps "${{ inputs.slippage_bps }}" \
-            --outdir ./retro
-        shell: bash
+          python etf-trading-engine/scripts/guardrails.py             --config ./etf-trading-config/model.yaml             --kpis ./outputs_asof/kpis.json             --wf ./outputs_asof/wf_report.json || true
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: retro-${{ inputs.as_of }}
+          name: retro-asof-${{ inputs.as_of }}
           path: |
             outputs_asof/**
-            features_asof/**
-            retro/**
+            etf-trading-engine/data/eod.csv
